fix(links): assign the margin attribute to the links
Changes #icon-github to #link-github
Changes #icon-linkedin to #link-linkedin

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         </div>
         <div id="links-container">
             <a
+              id="link-github"
               href="https://github.com/simasdanilo"
               title="Go to Danilo's Github page"
             >
               <img
-                id="icon-github"
                 class="icon"
                 src="images/icon-github.png"
                 alt="GitHub Logo"
               />
             </a>
             <a
+              id="link-linkedin"
               href="https://br.linkedin.com/in/simasdanilo"
               title="Go to Danilo's LinkedIn page"
             >
               <img
-                id="icon-linkedin"
                 class="icon"
                 src="images/icon-linkedin.png"
                 alt="LinkedIn Logo"
