fix(index): fixes description text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 alt="Danilo's avatar. Basically a man with short spiky hair, failed beard, wearing full frame glasses and a nice smile.">
             </div>
             <h1 id="name">Danilo Simas</h1>
-            <h3 id="description">Mobile Developer and a UI/UX enthusiast</h4>
+            <h3 id="description">Mobile developer and UI/UX enthusiast</h4>
             <p id="about-me">
               Hello there, my name is Danilo and I'm a mobile developer.<br/>
               Currently I'm focused on building up my skills as an Android Developer.<br/>
