--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Danilo Simas Website</title>
     <link type="text/css" rel="stylesheet" href="css/main.css" />
 </head>
 <body>
