--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Danilo Simas Website</title>
+    <meta name="description" content="Hello there, I'm Danilo and this is my website. I am a mobile developer and UI/UX enthusiast. Make yourself at home.">
+    <meta name="keywords" content="Danilo,Simas,simasdanilo,mobile,developer,android,website,github">
     <link type="text/css" rel="stylesheet" href="css/main.css" />
 </head>
 <body>
